# PingCap_TalentPlan_Projects

./: README
Project1/: Cargo.toml
Project1/src/: lib.rs
Project2/: Cargo.toml  cli.yml
Project2/src/: lib.rs
