[package]
name = "kvs"
version = "0.1.0"
authors = ["Manish Shankla"]
description = "A key-value store following ping-caps talent plan"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
